App: Update H.264 script for GXF 5.0 / GXF MM 4.1.1 extensions
Update to fetch GXF MM dependencies from NGC:
https://catalog.ngc.nvidia.com/orgs/nvidia/teams/graph-composer/resources/videodecoderextension/version

GXF MM 4.1.1 supports GXF 5.0 / Ubuntu >= 24.04 (glibc >= 2.39).

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/h264/Dockerfile
+++ b/applications/h264/Dockerfile
@@ -21,7 +21,7 @@
 ARG BASE_IMAGE
 ARG GPU_TYPE
 
-FROM nvcr.io/nvidia/clara-holoscan/holoscan:v3.2.0-dgpu as base
+FROM ${BASE_IMAGE} as base
 
 ARG DEBIAN_FRONTEND=noninteractive
 
