--- a/operators/gamma_correction/CMakeLists.txt
+++ b/operators/gamma_correction/CMakeLists.txt
@@ -15,14 +15,18 @@
 
 cmake_minimum_required(VERSION 3.20)
 
-project(slang_shader)
+project(gamma_correction)
 
-find_package(holoscan 3.3.0 REQUIRED CONFIG
+find_package(holoscan 3.5.0 REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
-find_package(CUDAToolkit 12.8 REQUIRED)
 
 add_subdirectory(cpp)
 
 if(HOLOHUB_BUILD_PYTHON)
     add_subdirectory(python)
+endif()
+
+# Add test subdirectory if testing is enabled
+if(BUILD_TESTING)
+    add_subdirectory(test)
 endif()
