Add Rivermax ANO testing
This commit introduces basic testing for Rivermax manager
- New pytest test case for Rivermax TX/RX validation (with both receiver
  applications - ipo_receiver and rtp_receiver)
- Rivermax applications uses the NIC IP address, therefore this commit
  enhance the network interface utilities with IP address detection.

Note: Validation currently relies on receiver-side metrics only. Future
enhancement will include sender-side packet comparison once
Rivermax-dev-kit provides sender logging capabilities.

Signed-off-by: Dana Lessner <dlessner@nvidia.com>

--- a/applications/adv_networking_bench/adv_networking_bench_rivermax_tx_rx.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_rivermax_tx_rx.yaml
@@ -98,6 +98,7 @@ advanced_network:
             settings_type: "media_sender"
             memory_registration: true
             memory_allocation: true
+            use_internal_memory_pool: true
             memory_pool_location: "device"
             #allocator_type: "huge_page_2mb"
             verbose: true
