Remove deltalcast_videomaster extension and related files from the project
Signed-off-by: Laurent Radoux <radoux.laurent@gmail.com>
Signed-off-by: td <t.dethier@deltacast.tv>

--- a/operators/CMakeLists.txt
+++ b/operators/CMakeLists.txt
@@ -21,7 +21,7 @@ add_holohub_operator(basic_network)
 add_holohub_operator(cvcuda_holoscan_interop)
 add_subdirectory(deidentification)
 add_subdirectory(dds)
-add_holohub_operator(deltacast_videomaster DEPENDS EXTENSIONS deltacast_videomaster)
+add_holohub_operator(deltacast_videomaster)
 add_holohub_operator(emergent_source DEPENDS EXTENSIONS emergent_source)
 add_holohub_operator(fft)
 add_holohub_operator(gamma_correction DEPENDS OPERATORS slang_shader)
