Add FetchHolohubOperator utility and tutorial for external applications
- Introduced `FetchHolohubOperator.cmake` to efficiently fetch specific operators from the Holohub repository using Git sparse checkout.
- Added a new tutorial demonstrating how to integrate Holohub operators into external applications, including setup instructions and example code.
- Updated CMakeLists.txt files to include the new fetching utility and link against the AJA source operator.

Signed-off-by: Julien Jomier <jjomier@nvidia.com>

--- a/operators/aja_source/CMakeLists.txt
+++ b/operators/aja_source/CMakeLists.txt
@@ -48,6 +48,8 @@ add_library(aja_source SHARED
   )
 
 add_library(holoscan::aja ALIAS aja_source)
+add_library(holoscan::ops::aja ALIAS aja_source)
+
 target_include_directories(aja_source INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_definitions(aja_source INTERFACE AJA_SOURCE)
 
