holsocan streaming app

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -106,7 +106,9 @@ add_holohub_application(psd_pipeline DEPENDS
                                   data_writer)
 
 add_holohub_application(ultrasound_segmentation DEPENDS OPERATORS aja_source)
+add_holohub_application(streaming_client_demo DEPENDS OPERATORS streaming_client)
 
+add_holohub_application(streaming_server_demo DEPENDS OPERATORS streaming_server)
 add_holohub_application(velodyne_lidar_app DEPENDS
                         OPERATORS velodyne_lidar
                                   basic_network
