--- a/applications/colonoscopy_segmentation/CMakeLists.txt
+++ b/applications/colonoscopy_segmentation/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2022-2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2022-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -60,6 +60,9 @@ if(BUILD_TESTING)
   add_custom_target(colonoscopy_segmentation_test ALL
     DEPENDS "colonoscopy_segmentation_test.py"
   )
+
+  # Get GXF_LIB_DIR for Python tests
+  find_package(holoscan)
 
   # Add test
   add_test(NAME colonoscopy_segmentation_python_test
