--- a/applications/holochat/Dockerfile
+++ b/applications/holochat/Dockerfile
@@ -44,7 +44,7 @@ COPY --from=pytorch /tmp/pip/torch*.whl /tmp/pip/
 ARG TARGETARCH
 RUN if [ "$TARGETARCH" = "amd64" ]; then \
         echo "Building for x86 (AMD64) architecture"; \
-        python3 -m pip install torch==2.2.0; \
+        python3 -m pip install torch==2.4.*; \
     elif [ "$TARGETARCH" = "arm64" ]; then \
         echo "Building for ARM64 architecture"; \
         python3 -m pip install /tmp/pip/torch-2.1.0a0+32f93b1-cp310-cp310-linux_aarch64.whl; \
