--- a/applications/nvidia_video_codec/CMakeLists.txt
+++ b/applications/nvidia_video_codec/CMakeLists.txt
@@ -23,6 +23,15 @@ add_holohub_application(nvc_encode_decode DEPENDS OPERATORS
 add_holohub_application(nvc_encode_writer DEPENDS OPERATORS
                           nv_video_encoder
                           tensor_to_file)
+add_holohub_application(nvc_endoscopy_tool_tracking DEPENDS OPERATORS
+                          nv_video_reader
+                          nv_video_encoder
+                          nv_video_decoder
+                          tensor_to_file
+                          tensor_to_video_buffer
+                          lstm_tensor_rt_inference
+                          tool_tracking_postprocessor)
+
 
 # Download the endoscopy sample data
 if(OP_nv_video_encoder OR OP_nv_video_decoder)
