fix: add missing streaming client operator target to CMakeLists.txt
- Add holoscan::ops::streaming_client to target_link_libraries
- Addresses reviewer feedback about missing streaming client operator target
- Ensures proper linking with the streaming client operator dependency
- Matches dependency listed in metadata.json (holoscan::streaming_client_operator)

The streaming client operator is essential for the application to function
and was incorrectly omitted from the linking configuration.

Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/streaming_client_demo/cpp/CMakeLists.txt
+++ b/applications/streaming_client_demo/cpp/CMakeLists.txt
@@ -68,6 +68,7 @@ target_include_directories(streaming_client_demo PUBLIC $<BUILD_INTERFACE:${Open
 target_link_libraries(streaming_client_demo
     PUBLIC
     holoscan::core
+    holoscan::ops::streaming_client
     ${OpenCV_LIBS}
     CUDA::cudart
     CUDA::cuda_driver
