Fix OpenCV installation in streaming client Dockerfile
Address code review feedback from @tbirdso:

- Replace generic OpenCV packages with version-pinned 4.5 installation
- Remove symbolic link workaround that masked version differences
- Add robust fallback to build OpenCV 4.5.5 from source if packages unavailable
- Ensure proper OpenCV 4.5 dependencies for StreamingClient compatibility

This approach is more reliable and easier to debug than the previous
symbolic link strategy.

Fixes: OpenCV version pinning and installation reliability
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/streaming_client_demo/Dockerfile
+++ b/applications/streaming_client_demo/Dockerfile
@@ -27,13 +27,42 @@ RUN apt-get update && apt-get install -y \
     gir1.2-girepository-2.0 \
     gobject-introspection \
     python3-gi \
-    libopencv-dev \
-    libopencv-contrib-dev \
     ffmpeg \
     wget \
     unzip \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
+
+# Install OpenCV 4.5 specifically
+RUN apt-get update && \
+    # Check available OpenCV versions and install 4.5 if available
+    apt-cache policy libopencv-dev && \
+    # Try to install specific version 4.5, fallback to building from source if needed
+    (apt-get install -y libopencv-dev=4.5* libopencv-contrib-dev=4.5* || \
+     # If version 4.5 not available in repos, install build dependencies and build from source
+     (apt-get install -y build-essential cmake git pkg-config && \
+      apt-get install -y libjpeg-dev libtiff5-dev libpng-dev && \
+      apt-get install -y libavcodec-dev libavformat-dev libswscale-dev libv4l-dev && \
+      apt-get install -y libxvidcore-dev libx264-dev && \
+      apt-get install -y libgtk-3-dev && \
+      apt-get install -y libatlas-base-dev gfortran && \
+      cd /tmp && \
+      git clone --branch 4.5.5 --depth 1 https://github.com/opencv/opencv.git && \
+      git clone --branch 4.5.5 --depth 1 https://github.com/opencv/opencv_contrib.git && \
+      cd opencv && mkdir build && cd build && \
+      cmake -D CMAKE_BUILD_TYPE=RELEASE \
+            -D CMAKE_INSTALL_PREFIX=/usr/local \
+            -D OPENCV_EXTRA_MODULES_PATH=/tmp/opencv_contrib/modules \
+            -D BUILD_EXAMPLES=OFF \
+            -D BUILD_TESTS=OFF \
+            -D BUILD_PERF_TESTS=OFF \
+            .. && \
+      make -j$(nproc) && \
+      make install && \
+      ldconfig && \
+      cd / && rm -rf /tmp/opencv /tmp/opencv_contrib)) && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 # Install NGC CLI following official instructions
 WORKDIR /tmp/ngc-install
@@ -55,19 +84,6 @@ ENV PATH="/usr/local/ngc/ngc-cli:${PATH}"
 
 # Enable autocomplete
 RUN echo "source /etc/bash_completion" >> ~/.bashrc
-
-# Create symbolic links to match StreamingClient expectations
-RUN cd /usr/lib/x86_64-linux-gnu && \
-    # Find the actual OpenCV version installed and create standard symbolic links
-    OPENCV_VERSION=$(ls libopencv_core.so.* | head -1 | sed 's/libopencv_core.so.//') && \
-    echo "Found OpenCV version: $OPENCV_VERSION" && \
-    ln -sf libopencv_core.so.$OPENCV_VERSION libopencv_core.so.4.5 && \
-    ln -sf libopencv_imgproc.so.$OPENCV_VERSION libopencv_imgproc.so.4.5 && \
-    ln -sf libopencv_highgui.so.$OPENCV_VERSION libopencv_highgui.so.4.5 && \
-    ln -sf libopencv_videoio.so.$OPENCV_VERSION libopencv_videoio.so.4.5 && \
-    ln -sf libopencv_imgcodecs.so.$OPENCV_VERSION libopencv_imgcodecs.so.4.5 && \
-    ln -sf libopencv_dnn.so.$OPENCV_VERSION libopencv_dnn.so.4.5 || \
-    echo "Some OpenCV libraries may not exist, continuing..."
 
 # Install Python packages
 RUN python3 -m pip install --no-cache-dir setuptools && \
