--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -134,3 +134,4 @@ add_subdirectory(orsi)
 add_subdirectory(nvidia_nim)
 add_subdirectory(ehr_query_llm)
 add_subdirectory(slang)
+add_holohub_application(myapp)
