Clean up CMakeLists.txt files per code review feedback
Address @jjomier's feedback by removing unnecessary elements:

- Remove DEBUG messages from both streaming application CMakeLists.txt files
- Simplify verbose file permissions to essential execute permissions only
- Clean up development-time debug output for production readiness
- Maintain consistency across streaming_server_demo and streaming_client_demo

Changes improve code clarity and remove unnecessary verbosity while
maintaining full functionality.

Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/streaming_client_demo/CMakeLists.txt
+++ b/applications/streaming_client_demo/CMakeLists.txt
@@ -17,7 +17,6 @@ cmake_minimum_required(VERSION 3.20)
 project(streaming_client_demo)
 
 # Add C++ and Python subdirectories
-message(DEBUG "=== PROCESSING PARENT streaming_client_demo/CMakeLists.txt ===")
 
 # Add C++ subdirectory
 add_subdirectory(cpp)
@@ -34,8 +33,4 @@ configure_file(
 
 # Create run_python.sh script
 file(WRITE ${CMAKE_BINARY_DIR}/run_python.sh "#!/bin/bash\n\npython3 streaming_client_demo.py \"$@\"\n")
-file(CHMOD ${CMAKE_BINARY_DIR}/run_python.sh
-    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
-)
-
-message(DEBUG "=== COMPLETED PARENT streaming_client_demo/CMakeLists.txt ===")
+file(CHMOD ${CMAKE_BINARY_DIR}/run_python.sh PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)
