Make Python subdirectory conditional on HOLOHUB_BUILD_PYTHON flag
This addresses @jjomier's feedback to make Python components optional in both
streaming applications, following the standard pattern used throughout holohub.

Changes:
- streaming_client_demo: Wrap python subdirectory and file copying in HOLOHUB_BUILD_PYTHON conditional
- streaming_server_demo: Apply same conditional logic for consistency

Benefits:
- Faster C++-only builds when Python isn't needed
- Consistent with other holohub applications
- Reduces dependency requirements when building without Python support

Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/streaming_client_demo/CMakeLists.txt
+++ b/applications/streaming_client_demo/CMakeLists.txt
@@ -22,11 +22,13 @@ project(streaming_client_demo)
 add_subdirectory(cpp)
 
 # Add Python subdirectory
-add_subdirectory(python)
-
-# Copy Python files to build directory
-configure_file(
-    ${CMAKE_CURRENT_SOURCE_DIR}/python/streaming_client_demo.py
-    ${CMAKE_BINARY_DIR}/streaming_client_demo.py
-    COPYONLY
-)
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+  
+  # Copy Python files to build directory
+  configure_file(
+      ${CMAKE_CURRENT_SOURCE_DIR}/python/streaming_client_demo.py
+      ${CMAKE_BINARY_DIR}/streaming_client_demo.py
+      COPYONLY
+  )
+endif()
